# shuten

./: .gitignore  Cargo.toml  LICENSE.txt  readme.md
crates/shuten/: Cargo.toml
crates/shuten/examples/: demo.rs  lines.rs  stats.rs
crates/shuten/src/: config.rs  event.rs  lib.rs  queue.rs  terminal.rs
crates/shuten/src/event/: key.rs  modifiers.rs  mouse.rs
crates/shuten/src/terminal/: helpers.rs  timer.rs
crates/shuten_core/: Cargo.toml  readme.md
crates/shuten_core/examples/: tetris.rs
crates/shuten_core/src/: context.rs  event.rs  geom.rs  help.rs  label.rs  layout.rs  lib.rs  queue.rs  renderer.rs  style.rs  surface.rs  terminal.rs  timer.rs
crates/shuten_core/src/event/: key.rs  modifiers.rs  mouse.rs
crates/shuten_core/src/geom/: align.rs  constraints.rs  dimension.rs  flex.rs  gradient.rs  margin.rs  offset.rs  pos2.rs  pos2f.rs  rect.rs  rectf.rs  vec2.rs  vec2f.rs
crates/shuten_core/src/label/: digits.rs  styled.rs
crates/shuten_core/src/renderer/: metrics.rs  null_renderer.rs  tee_renderer.rs  term_renderer.rs
crates/shuten_core/src/renderer/help/: debug.rs  explain.rs  mod.rs
crates/shuten_core/src/renderer/metrics/: renderer.rs
crates/shuten_core/src/style/: attribute.rs  color.rs  hsl.rs  rgb.rs  rgba.rs
crates/shuten_core/src/surface/: canvas.rs  cell.rs
crates/shuten_core/src/terminal/: config.rs  helpers.rs
crates/shuten_declarative/: Cargo.toml
crates/shuten_declarative/examples/: declarative.rs  testing.rs
crates/shuten_declarative/src/: application.rs  context.rs  external.rs  lib.rs  logger.rs  term.rs  widgets.rs
crates/shuten_declarative/src/input/: ctx.rs  event.rs  event_interest.rs  input_state.rs  interest.rs  key_event.rs  keybind.rs  mod.rs  mouse.rs  mouse_event.rs
crates/shuten_declarative/src/layout/: ctx.rs  layered.rs  mod.rs  node.rs
crates/shuten_declarative/src/paint/: ctx.rs  mod.rs
crates/shuten_declarative/src/tree/: context.rs  mod.rs  node.rs  widget_id.rs
crates/shuten_declarative/src/widget/: dummy_widget.rs  erased_widget.rs  mod.rs  response.rs  root_widget.rs  widget_ext.rs
crates/shuten_declarative/src/widgets/: align.rs  button.rs  color_box.rs  constrained.rs  divider.rs  draggable.rs  flexible.rs  float.rs  grid.rs  keyboard_area.rs  label.rs  list.rs  log_view.rs  margin.rs  max_size.rs  metrics.rs  min_size.rs  mouse_area.rs  offset.rs  panel.rs  reflow.rs  render_cell.rs  scrollable.rs  selected_view.rs  slider.rs  spacer.rs  state.rs  text_input.rs  toggle.rs  unconstrained.rs  wrap.rs
crates/shuten_ui/: Cargo.toml
crates/shuten_ui/examples/: hello.rs
crates/shuten_ui/src/: debug_fmt.rs  ext.rs  input.rs  interest.rs  lib.rs  node.rs  ui.rs  widget.rs  widgets.rs
crates/shuten_ui/src/input/: events.rs  keyboard.rs  layered.rs  mouse.rs
crates/shuten_ui/src/ui/: context.rs  layout.rs  nodes.rs  paint.rs  placeholder_widget.rs  response.rs  root_widget.rs
crates/shuten_ui/src/widget/: erased.rs  props_ext.rs  widget_ext.rs
crates/shuten_ui/src/widgets/: align.rs  border.rs  draggable.rs  filled.rs  flex.rs  label.rs  list.rs  margin.rs  offset.rs  sized.rs  slider.rs  state.rs
