[package]
name = "shuten_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
profiling = { version = "1.0.15", optional = true }
serde = { version = "1.0.197", features = [ "derive" ], optional = true }

[features]
serde = [ "dep:serde" ]
profiling = [ "dep:profiling" ]

[dev-dependencies]
similar = "2.4.0"
similar-asserts = "1.5.0"
