[package]
name = "shuten_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
profiling = { version = "1.0.15", optional = true }
serde = { version = "1.0.197", features = [ "derive" ], optional = true }

[features]
default = [  ]
serde = [ "dep:serde" ]
profiling = [ "dep:profiling" ]
